Added a DEV profile to make easier to compile/package the project during development.