@@ -210,7 +210,7 @@
 					<inplace>true</inplace>
 					<logLevel>TRACE</logLevel>
 					<runTarget>App.html</runTarget>
-					<module>org.picketlink.as.console.Development</module>
+					<module>org.picketlink.as.console.PicketLinkConsole</module>
 					<warSourceDirectory>war</warSourceDirectory>
 					<extraJvmArgs>-Xmx1024m -DDEBUG -XX:MaxPermSize=256M</extraJvmArgs>
 					<servicePattern>**/*Service.java</servicePattern>
@@ -345,7 +345,8 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -417,6 +418,49 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<property>
+					<name>dev</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>gwt-maven-plugin</artifactId>
+						<version>${gwt.maven}</version>
+						<configuration>
+							<inplace>true</inplace>
+							<logLevel>TRACE</logLevel>
+							<runTarget>App.html</runTarget>
+							<module>org.picketlink.as.console.Development</module>
+							<warSourceDirectory>war</warSourceDirectory>
+							<extraJvmArgs>-Xmx1024m -DDEBUG -XX:MaxPermSize=256M</extraJvmArgs>
+							<servicePattern>**/*Service.java</servicePattern>
+							<style>OBF</style>
+							<hostedWebapp>war</hostedWebapp>
+							<localWorkers>2</localWorkers>
+							<compileReport>false</compileReport>
+							<force>false</force>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>clean</goal>
+									<goal>resources</goal>
+									<goal>compile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<!-- Repositories -->
 	<repositories>
